[items] Really happy with the new weapons format, almost ready to be moved to the preamble!

--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -1,23 +1,4 @@
 \section{Предмети}
-
-
-\newcommand{\weapon}[8]
-{
-\begin{multicols}{2}
-\noindent #2 \\
-Необходима сила: #3  \\
-Обсег: #4  \\
-Щети: #5  \\
-Свойства: #6  \\
-Маса: #7  \\
-Стойност: #8  \\
-\includegraphics[width=0.2\textwidth]{../images/#1}~
-\end{multicols}
-}
-
-\weapon{sword}{Меч}{5-12}{среден (0.9м)}{средни (//-2)}{повратливост}{1.1кг}{евтин}
-
-
 \subsection{Валути}
 Абстрактна валута: много евтиn, евтин, среден, скъп, много скъп; няма преобразувания.  \\
 Луседом Терея: 100 имперски крони = 10 имперски рояла = 1 имперски соверен             \\
@@ -113,9 +94,42 @@ Some other figures: There will be one noble household per 200 population, one la
           & магаре С30                              & боен кон                 &
 \end{tabular}
 
+
 \subsection{Оръжия}
+\newcommand{\weapon}[8]
+{
+\begin{multicols}{2}
+\noindent #2 \\
+Необходима сила: #3  \\
+Обсег: #4  \\
+Щети: #5  \\
+Свойства: #6  \\
+Маса: #7  \\
+Стойност: #8  \\
+\includegraphics[height=0.13\textheight]{../images/#1}~
+\end{multicols}
+}
+
+\weapon{sword}{Меч}{5-12}{среден (0.9м)}{средни (//-2)}{повратливост}{1.1кг}{евтин}
+\weapon{longsword}{Дълъг меч}{5-12}{дълъг (1,3м)}{високи (//-2)}{повратливост}{1.5кг}{среден}
+\weapon{zweihander}{Цвайхендер}{8-15}{дълъг (2.1м)}{високи (//-2)}{-}{3кг}{среден}
+\weapon{falx}{Фалкс}{5-12}{дълъг (1.5м)}{високи (+1/-1/-2)}{бонус срещу щитове}{1.5кг}{евтин}
+\weapon{small_falx}{Малък фалкс, сърп}{5-12}{среден (0.9м)}{средни/високи (+1/-1/-2)}{бонус срещу щитове}{1кг}{евтин}
+\weapon{dane_axe}{Датска брадва}{5-12}{среден (1.2м)}{високи (+2/-2/-2)}{бронебойност}{1.5кг}{евтин}
+\weapon{helbard}{Алебарда}{5-12}{дълъг (1.7м)}{високи (//)}{бронебойност, поваляне, бонус рещу щитове}{2.2кг}{евтин}
+\weapon{pike}{Пика}{5-12}{отдалечен (7м)}{високи (/-4/-4)}{}{5кг}{евтин}
+\weapon{glavie}{Глейв, нагината}{5-12}{дълъг (2.5м)}{високи (/-1/-2)}{бонус срещу щитове}{1кг}{евтин}
+\weapon{naginata}{Глейв, нагината}{5-12}{дълъг (2.5м)}{високи (/-1/-2)}{бонус срещу щитове}{1кг}{евтин}
+\weapon{small_falx}{Малък фалкс, сърп}{5-12}{среден (0.9м)}{средни/високи (+1/-1/-2)}{бонус срещу щитове}{1кг}{евтин}
+\weapon{small_falx}{Малък фалкс, сърп}{5-12}{среден (0.9м)}{средни/високи (+1/-1/-2)}{бонус срещу щитове}{1кг}{евтин}
+\weapon{small_falx}{Малък фалкс, сърп}{5-12}{среден (0.9м)}{средни/високи (+1/-1/-2)}{бонус срещу щитове}{1кг}{евтин}
+\weapon{small_falx}{Малък фалкс, сърп}{5-12}{среден (0.9м)}{средни/високи (+1/-1/-2)}{бонус срещу щитове}{1кг}{евтин}
+
+\subsection{Old people}
+
+
 \begin{tabular}{p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm}}
-Наименование          & Необходима Сила      & Обсег      & Щети (Щм, Щс, Щт)       & Свойства       & Маса  & Стойност     \\
+Оръжие                & Необходима Сила      & Обсег      & Щети (Щм, Щс, Щт)       & Свойства       & Маса  & Стойност  \\
 % Едноръчни оръжия.
 Нож                   & 3-9                  & близък     & ниски (//-2)      & -              & 0.2кг & много евтин  \\
 Брадвичка             & 5-12                 & среден     & средни, (-4//-2)  & бронебойност   & 1кг   & много евтин  \\
@@ -129,65 +143,6 @@ Some other figures: There will be one noble household per 200 population, one la
 % Двуръчни оръжия.
 Пика (две ръце)       & 4-11                 & отдалечен  & средни     & -              & 3кг   & евтин        \\
 Дълга бойна брадва    & 5-12                 & далечен    & високи     & бронебойност   & 2кг   & евтин        \\
-
-име, необходима сила!, дължина, щети, свойства, маса, стойност, изображение
-Меч                   & 5-12                 & 0.9м     & средни (//-2)    & повратливост   & 1.1кг   & среден       \\
-\begin{center}
-\includegraphics[width=0.75\textwidth]{../images/sword}~
-\\[1cm]
-\end{center}
-
-Дълъг меч             & 5-12                 &  1.3м     & високи (//-2)    & повратливост   & 1.5кг   & среден       \\
-\begin{center}
-\includegraphics[width=0.75\textwidth]{../images/longsword}~
-\\[1cm]
-\end{center}
-
-Цвайхендер            & 8-15                 &  2.1м     & високи (//-2)    & -              & 3кг   & среден       \\
-\begin{center}
-\includegraphics[width=0.75\textwidth]{../images/sword}~
-\\[1cm]
-\end{center}
-
-Фалкс                 & 5-12                 & 1.5м   & високи (//-2)    & +2 на всички хвърляния срещу щитове   & 1.5кг   & евтин       \\
-\begin{center}
-\includegraphics[width=0.75\textwidth]{../images/falx}~
-\\[1cm]
-\end{center}
-
-Малък фалкс, сърп     & 5-12                 & 0.9м   & средни/високи (//-2)    & +2 на всички хвърляния срещу щитове   & 1.5кг   & евтин       \\
-\begin{center}
-\includegraphics[width=0.75\textwidth]{../images/small_falx}~
-\\[1cm]
-\end{center}
-
-Датска брадва         & 5-12                 & 1.2м & високи (+2/-2/-2) & бронебойност           & 1.5кг & евтин  \\
-\begin{center}
-\includegraphics[width=0.75\textwidth]{../images/dane_axe}~
-\\[1cm]
-\end{center}
-
-Алебарда             & 5-12                  & 1.7м      & високи (//-2)     & бронебойност, поваляне & 2.2кг & евтин  \\
-\begin{center}
-\includegraphics[width=0.75\textwidth]{../images/helbard}~
-\\[1cm]
-\end{center}
-
-Пика                 & 5-12                 &  7м     & високи (//-2)    & повратливост   & 5кг   & евтин       \\
-\begin{center}
-\includegraphics[width=0.75\textwidth]{../images/pike}~
-\\[1cm]
-\end{center}
-
-Глейв, нагината      & 5-12                 & 2.5м & високи (+2/-2/-2) & бонус срещу щитове & 1.5кг & евтин  \\
-\begin{center}
-\includegraphics[width=0.75\textwidth]{../images/glavie}~
-\\[1cm]
-\end{center}
-\begin{center}
-\includegraphics[width=0.75\textwidth]{../images/naginata}~
-\\[1cm]
-\end{center}
 
 % Отдалечени атаки.
 Метателен нож         & 3-9                  & (Сила/2)   & ниски      & -              & 0.2кг & много евтин  \\
