[item] Yet more weapons. We are far from ready.

--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -99,55 +99,44 @@ Some other figures: There will be one noble household per 200 population, one la
 \newcommand{\weapon}[8]
 {
 \begin{multicols}{2}
-\noindent #2 \\
-Необходима сила: #3  \\
-Обсег: #4  \\
-Щети: #5  \\
-Свойства: #6  \\
-Маса: #7  \\
-Стойност: #8  \\
-\includegraphics[height=0.13\textheight]{../images/#1}~
+  \noindent \textbf{#2} \\
+  Необходима сила: #3  \\
+  Обсег: #4  \\
+  Щети: #5  \\
+  Свойства: #6  \\
+  Маса: #7  \\
+  Стойност: #8  \\
+  \includegraphics[height=0.13\textheight]{../images/#1}~
 \end{multicols}
 }
 
+\weapon{knife}{Нож, кама}{3-9}{близък (0.3м)}{ниски (//-2)}{-}{0.3кг}{много евтин}
+\weapon{gladius}{Гладиус}{4-10}{среден (0.8м)}{средни (/-2/-2)}{повратливост}{0.8кг}{евтин}
+\weapon{rapier}{Рапира}{5-12}{среден (1.2м)}{средни (+2/-2/0)}{}{1кг}{среден}
 \weapon{sword}{Меч}{5-12}{среден (0.9м)}{средни (//-2)}{повратливост}{1.1кг}{евтин}
 \weapon{longsword}{Дълъг меч}{5-12}{дълъг (1,3м)}{високи (//-2)}{повратливост}{1.5кг}{среден}
 \weapon{zweihander}{Цвайхендер}{8-15}{дълъг (2.1м)}{високи (//-2)}{-}{3кг}{среден}
-\weapon{falx}{Фалкс}{5-12}{дълъг (1.5м)}{високи (+1/-1/-2)}{бонус срещу щитове}{1.5кг}{евтин}
-\weapon{small_falx}{Малък фалкс, сърп}{5-12}{среден (0.9м)}{средни/високи (+1/-1/-2)}{бонус срещу щитове}{1кг}{евтин}
+
+\weapon{small_falx}{Малък фалкс, сърп}{5-12}{среден (0.9м)}{средни/високи (-2/+1/-2)}{закача щит}{1кг}{евтин}
+\weapon{falx}{Фалкс}{5-12}{дълъг (1.5м)}{високи (-2/+1/-2)}{закача щит}{1.5кг}{евтин}
+
+\weapon{hand_axe}{Брадвичка}{5-12}{среден (0.8м)}{средни (-1/+1/-1)}{закача щит}{0.8кг}{много евтин}
 \weapon{dane_axe}{Датска брадва}{5-12}{среден (1.2м)}{високи (+2/-2/-2)}{бронебойност}{1.5кг}{евтин}
-\weapon{helbard}{Алебарда}{5-12}{дълъг (1.7м)}{високи (//)}{бронебойност, поваляне, бонус рещу щитове}{2.2кг}{евтин}
-\weapon{pike}{Пика}{5-12}{отдалечен (7м)}{високи (/-4/-4)}{}{5кг}{евтин}
+\weapon{helbard}{Алебарда}{5-12}{дълъг (1.7м)}{високи (//)}{бронебойност, поваляне, закача щит}{2.2кг}{евтин}
+\weapon{pike}{Пика}{5-12}{отдалечен (7м)}{високи (/-4/-4)}{-}{5кг}{евтин}
 \weapon{glavie}{Глейв, нагината}{5-12}{дълъг (2.5м)}{високи (/-1/-2)}{бонус срещу щитове}{1кг}{евтин}
-\weapon{naginata}{Глейв, нагината}{5-12}{дълъг (2.5м)}{високи (/-1/-2)}{бонус срещу щитове}{1кг}{евтин}
-\weapon{small_falx}{Малък фалкс, сърп}{5-12}{среден (0.9м)}{средни/високи (+1/-1/-2)}{бонус срещу щитове}{1кг}{евтин}
-\weapon{small_falx}{Малък фалкс, сърп}{5-12}{среден (0.9м)}{средни/високи (+1/-1/-2)}{бонус срещу щитове}{1кг}{евтин}
-\weapon{small_falx}{Малък фалкс, сърп}{5-12}{среден (0.9м)}{средни/високи (+1/-1/-2)}{бонус срещу щитове}{1кг}{евтин}
-\weapon{small_falx}{Малък фалкс, сърп}{5-12}{среден (0.9м)}{средни/високи (+1/-1/-2)}{бонус срещу щитове}{1кг}{евтин}
+% \weapon{naginata}{Глейв, нагината}{5-12}{дълъг (2.5м)}{високи (/-1/-2)}{бонус срещу щитове}{1кг}{евтин} % !!!!! beautiful [icture, include it some day
+
+\weapon{throwing_knife}{Нож за хвърляне}{3-9}{Сила/2}{ниски (/-4/-4)}{-}{0.2кг}{много евтин}
+\weapon{javelin}{Метателно копие}{5-12}{Сила}{средни (/0/0)}{-}{3кг}{много евтин}
+
+\weapon{longbow}{Дълъг лък}{7, зарежда се 1 ход}{Сила*2}{високи (/0/0)}{-}{3кг}{много евтин}
+
 
 \subsection{Old people}
 
 
 \begin{tabular}{p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm}}
-Оръжие                & Необходима Сила      & Обсег      & Щети (Щм, Щс, Щт)       & Свойства       & Маса  & Стойност  \\
-% Едноръчни оръжия.
-Нож                   & 3-9                  & близък     & ниски (//-2)      & -              & 0.2кг & много евтин  \\
-Брадвичка             & 5-12                 & среден     & средни, (-4//-2)  & бронебойност   & 1кг   & много евтин  \\
-атаки: средна средни -4//-2 близка -4//-2
-Къс меч               & 4-10                 & близък     & средни, (/-2/-4)  & повратливост   & 1кг   & евтин        \\
-атаки: 
-Меч 80см              & 5-12                 & среден     & средни, (//-2)    & повратливост   & 1кг   & евтин        \\
-атаки: среден /-2/-4 близък //-2
-Рапира                & 5-12                 & далечен    & средни, (+2/-2/0) &                & 1кг   & среден       \\
-
-% Двуръчни оръжия.
-Пика (две ръце)       & 4-11                 & отдалечен  & средни     & -              & 3кг   & евтин        \\
-Дълга бойна брадва    & 5-12                 & далечен    & високи     & бронебойност   & 2кг   & евтин        \\
-
-% Отдалечени атаки.
-Метателен нож         & 3-9                  & (Сила/2)   & ниски      & -              & 0.2кг & много евтин  \\
-Метателно копие       & 5-12                 & (Сила)     & средни     & -              & 1кг   & много евтин  \\
-Дървен дълъг лък      & 7, зарежда се 1 ход  & (Сила х 2) & високи     & -              & 2кг   & евтин        \\
 Малък арбалет         & 7, зарежда се 2 хода & (Сила х 2) & високи     & бронебойност I & 3кг   & евтин        \\
 Арбалет               & 7, зарежда се 2 хода & (Сила х 2) & високи     & бронебойност I & 3кг   & евтин        \\
 Арбалет с макара      & 5 необходима, 12 реална, зарежда се 10 хода & (Сила х 2) & високи & бронебойност II & 4кг & среден\\
