[items] Some shooting weapons.

--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -131,6 +131,13 @@ Some other figures: There will be one noble household per 200 population, one la
 \weapon{javelin}{Метателно копие}{5-12}{Сила}{средни (/0/0)}{-}{3кг}{много евтин}
 
 \weapon{longbow}{Дълъг лък}{7, зарежда се 1 ход}{Сила*2}{високи (/0/0)}{-}{3кг}{много евтин}
+\weapon{arrow}{Бодкин стрела}{-}{+2}{-2}{бронебойност}{0.033кг}{много евтин}
+\weapon{arrow}{Широка стрела}{-}{-}{+2}{}{0.033кг}{много евтин}
+
+\weapon{small_crossbow}{Малък арбалет}{7, зарежда се 2 хода}{Сила*2}{високи (/0/0)}{-}{3кг}{евтин}
+\weapon{lever_crossbow}{Арбалет}{7 необходима, 9 реална, зарежда се 6 хода}{Сила*2}{високи (/0/0)}{-}{3кг}{евтин}
+\weapon{windlass_crossbow}{Арбалет с макара}{7 необходима, 12 реална, зарежда се 12 хода}{Сила*2}{високи (/0/0)}{-}{3кг}{среден}
+\weapon{bolt}{Болт}{-}{+2}{-2}{бронебойност}{0.033кг}{много евтин}
 
 
 \subsection{Old people}
