[combat] Fixed a typo.

--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -49,9 +49,9 @@
 \end{abstractiontable}
 
 \begin{abstractiontable}{Отбрана}
-абсорбация               &               &                &                                                &  \\
-покритие                 & общо покритие &                &                                                &  \\
-                         &               & отбрана        &                                                &  \\
+абсорбация               &                &                &                                                &  \\
+покритие                 & обща абсобация &                &                                                &  \\
+                         &                & отбрана        &                                                &  \\
 \end{abstractiontable}
 
 \begin{abstractiontable}{Ресурси}
