[items] Final touches and cleanup.

--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -111,54 +111,36 @@ Some other figures: There will be one noble household per 200 population, one la
 }
 
 \weapon{knife}{Нож, кама}{3-9}{близък (0.3м)}{ниски (//-2)}{-}{0.3кг}{много евтин}
-\weapon{gladius}{Гладиус}{4-10}{среден (0.8м)}{средни (/-2/-2)}{повратливост}{0.8кг}{евтин}
-\weapon{rapier}{Рапира}{5-12}{среден (1.2м)}{средни (+2/-2/0)}{}{1кг}{среден}
+\weapon{gladius}{Гладиус}{4-10}{близък (0.8м)}{средни (/-2/-2)}{-}{0.8кг}{евтин}
+\weapon{rapier}{Рапира}{4-10}{среден (1.2м)}{средни (+2/-2/0)}{-}{1кг}{среден}
 \weapon{sword}{Меч}{5-12}{среден (0.9м)}{средни (//-2)}{повратливост}{1.1кг}{евтин}
 \weapon{longsword}{Дълъг меч}{5-12}{дълъг (1,3м)}{високи (//-2)}{повратливост}{1.5кг}{среден}
 \weapon{zweihander}{Цвайхендер}{8-15}{дълъг (2.1м)}{високи (//-2)}{-}{3кг}{среден}
 
-\weapon{small_falx}{Малък фалкс, сърп}{5-12}{среден (0.9м)}{средни/високи (-2/+1/-2)}{закача щит}{1кг}{евтин}
+\weapon{small_falx}{Малък фалкс, боен сърп}{4-10}{среден (0.9м)}{средни/високи (-2/+1/-2)}{закача щит}{1кг}{евтин}
 \weapon{falx}{Фалкс}{5-12}{дълъг (1.5м)}{високи (-2/+1/-2)}{закача щит}{1.5кг}{евтин}
 
-\weapon{hand_axe}{Брадвичка}{5-12}{среден (0.8м)}{средни (-1/+1/-1)}{закача щит}{0.8кг}{много евтин}
+\weapon{hand_axe}{Брадвичка}{5-12}{среден (0.8м)}{средни (-1/+1/-1)}{закача щит}{0.8кг}{евтин}
 \weapon{dane_axe}{Датска брадва}{5-12}{среден (1.2м)}{високи (+2/-2/-2)}{бронебойност}{1.5кг}{евтин}
 \weapon{helbard}{Алебарда}{5-12}{дълъг (1.7м)}{високи (//)}{бронебойност, поваляне, закача щит}{2.2кг}{евтин}
 \weapon{pike}{Пика}{5-12}{отдалечен (7м)}{високи (/-4/-4)}{-}{5кг}{евтин}
 \weapon{glavie}{Глейв, нагината}{5-12}{дълъг (2.5м)}{високи (/-1/-2)}{бонус срещу щитове}{1кг}{евтин}
-% \weapon{naginata}{Глейв, нагината}{5-12}{дълъг (2.5м)}{високи (/-1/-2)}{бонус срещу щитове}{1кг}{евтин} % !!!!! beautiful [icture, include it some day
 
 \weapon{throwing_knife}{Нож за хвърляне}{3-9}{Сила/2}{ниски (/-4/-4)}{-}{0.2кг}{много евтин}
-\weapon{javelin}{Метателно копие}{5-12}{Сила}{средни (/0/0)}{-}{3кг}{много евтин}
+\weapon{javelin}{Метателно копие}{5-12}{Сила}{високи (/0/0)}{-}{1кг}{много евтин}
+\weapon{pilum}{Пилум}{6-13}{Сила}{високи (/0/0)}{трудно за вадене}{1.2кг}{много евтин}
 
 \weapon{longbow}{Дълъг лък}{7, зарежда се 1 ход}{Сила*2}{високи (/0/0)}{-}{3кг}{много евтин}
-\weapon{arrow}{Бодкин стрела}{-}{+2}{-2}{бронебойност}{0.033кг}{много евтин}
-\weapon{arrow}{Широка стрела}{-}{-}{+2}{}{0.033кг}{много евтин}
+\weapon{arrow}{Бодкин стрела}{-}{+2}{-2}{бронебойност, трудно за вадене}{0.033кг}{много евтин}
+\weapon{arrow}{Широка стрела}{-}{-}{+2}{трудно за вадене}{0.033кг}{много евтин}
 
 \weapon{small_crossbow}{Малък арбалет}{7, зарежда се 2 хода}{Сила*2}{високи (/0/0)}{-}{3кг}{евтин}
 \weapon{lever_crossbow}{Арбалет}{7 необходима, 9 реална, зарежда се 6 хода}{Сила*2}{високи (/0/0)}{-}{3кг}{евтин}
 \weapon{windlass_crossbow}{Арбалет с макара}{7 необходима, 12 реална, зарежда се 12 хода}{Сила*2}{високи (/0/0)}{-}{3кг}{среден}
-\weapon{bolt}{Болт}{-}{+2}{-2}{бронебойност}{0.033кг}{много евтин}
+\weapon{bolt}{Болт}{-}{+2}{-2}{трудно за вадене}{0.033кг}{много евтин}
 
+\weapon{viking_shield}{Щит}{5-12}{близък (0.8/2м)}{ниски}{-}{5кг}{много евтин}
 
-\subsection{Old people}
-
-
-\begin{tabular}{p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm}}
-Малък арбалет         & 7, зарежда се 2 хода & (Сила х 2) & високи     & бронебойност I & 3кг   & евтин        \\
-Арбалет               & 7, зарежда се 2 хода & (Сила х 2) & високи     & бронебойност I & 3кг   & евтин        \\
-Арбалет с макара      & 5 необходима, 12 реална, зарежда се 10 хода & (Сила х 2) & високи & бронебойност II & 4кг & среден\\
-Колчан 12 стрели      & -                    & -          & -          & -              & 1кг   & много евтин  \\
-
-Бодкин стрела         & -                    & +3         & -3     & бронебойност       & 1.5кг & много евтин  \\
-Широка стрела         & -                    & -          & -      &                    & 1.5кг & много евтин  \\
-\begin{center}
-\includegraphics[width=0.75\textwidth]{../images/arrow}~
-\\[1cm]
-\end{center}
-
-% Щитове.
-Дървен щит 80см       & 5-12                 & близък     & ниски      & поваляне       & 2кг   & много евтин  \\
-\end{tabular}
 
 \subsection{Брони}
 \textbf{Здравина}:
