--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -69,8 +69,6 @@
 
 
 \subsection{Списък с правила}
-
-
 \subsubsection{Абсорбация}
 Свойството на броня да абсорбира част от сериозността на удар.
 
@@ -87,6 +85,7 @@
 Следващия ход нападателят има +5 на боравене.
 
 
+\begin{multicols}{2}
 \subsubsection{Боравене}
 Число, описващо колко вероятно е ръкопашна или далечна атака да достигне целта си.
 Равно е на умението с използвното оръжие.
@@ -104,6 +103,8 @@
 Второто оръжие може да се ползва за създаване на откриване (което добавя половината боравене в това оръжие към боравенето с основното оръжие) или пък независимо, за пласиране на стопиращи удари (в който случай се ползва независимо, но с наказание -5 на атака).
 Ако се атакува само с едното оръжие няма наказания, разбира се.
 Щитовете не търпят -5 при пазене.
+\includegraphics[height=0.8\textheight]{../images/naginata}~
+\end{multicols}
 
 
 \subsubsection{Дистанция}
@@ -156,7 +157,7 @@
 5 -> смърт, 3 -> безсъзнание и смъртоносна рана, 1 -> безсъзнание
 
 
-\subsubsection{Изисквана сила}
+\subsubsection{Необходима сила}
 Това е обсегът на Сила на героят, в който оръжието е ефективно.
 Ако персонажът има по-малко от минималната сила, разликата става наказание върху боравенето с това оръжие.
 От друга страна, Сила, по-висока от максималната, не допринася за по-високи щети.
@@ -302,12 +303,12 @@
 
 \subsubsection{Свойства на оръжие}
 \begin{itemize}
-\item{\textit{повратливост} (обикновено мечове; покрива всички по-близки дистанции от максимлната)}
-\item{\textit{бронебойност I} (чукове или леки клинове, като стрели и копия; намаля абсорбацията на половина)}
-\item{\textit{бронебойност II} (клиновидни, тежки остриета; намаля абсорбацията на $\frac1 4$)}
-\item{\textit{трудно за вадене} (не може да се извади от пробита проня по време на битка; не може да се извади от небронирана плът, ако зарът за щета е бил положителен; при вадене лечитеслтво с/у щетите; ако не успее се  нанасят още толкова щети, колкото първоначално)}
-\item{\textit{поваляне} (обикновено алебарди; наместо щети, атаката може да бъде обявена, че поваля опонента. Ако целта е конник в качествено бойно седло, -5 на атака)}
-\item{\textit{обезоръжаване} (обикновено меч или щит; при успешна защита има шанс оръжието на врага да е уловено в комплексния гард или шипове на "бос"a на щит)}
+\item{\textit{повратливост} - покрива всички по-близки дистанции от максимлната}
+\item{\textit{бронебойност} - пренебрегва половината абсорбацията на целта}
+\item{\textit{трудно за вадене} - не може да се извади от пробита броня, щит или плът; при вадене лечитеслтво с/у щетите; ако не успее се  нанасят още толкова щети, колкото първоначално}
+\item{\textit{поваляне} - наместо щети оръжието спъва и поваля опонента, дори конник; качествено бойно седло дава -5 на атака}
+\item{\textit{обезоръжащи куки} - ако париране със съответния щит или оръжие надхвърли с 5 нападението, вражеското оръжие е хвърлено на земята}
+\item{\textit{закачане на щит} - наместо щети, обръща вражеския щит така че да не пази; продължава до следващата атака на врага; не пречи на офанзивата със щит}
 \end{itemize}
 
 
