--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -115,6 +115,7 @@ Some other figures: There will be one noble household per 200 population, one la
 \weapon{rapier}{Рапира}{4-10}{среден (1.2м)}{средни (+2/-2/0)}{-}{1кг}{среден}
 \weapon{sword}{Меч}{5-12}{среден (0.9м)}{средни (//-2)}{повратливост}{1.1кг}{евтин}
 \weapon{longsword}{Дълъг меч}{5-12}{дълъг (1,3м)}{високи (//-2)}{повратливост}{1.5кг}{среден}
+\weapon{estok}{Есток}{5-12}{дълъг (1,3м)}{средни (/-4/-4)}{бронебойност}{1.5кг}{среден}
 \weapon{zweihander}{Цвайхендер}{8-15}{дълъг (2.1м)}{високи (//-2)}{-}{3кг}{среден}
 
 \weapon{small_falx}{Малък фалкс, боен сърп}{4-10}{среден (0.9м)}{средни/високи (-2/+1/-2)}{закача щит}{1кг}{евтин}
@@ -126,9 +127,13 @@ Some other figures: There will be one noble household per 200 population, one la
 \weapon{pike}{Пика}{5-12}{отдалечен (7м)}{високи (/-4/-4)}{-}{5кг}{евтин}
 \weapon{glavie}{Глейв, нагината}{5-12}{дълъг (2.5м)}{високи (/-1/-2)}{бонус срещу щитове}{1кг}{евтин}
 
+\weapon{warhammer}{Боен чук}{5-12}{близък (0.8мм)}{ниски (/-1/-2)}{закача щит, бронебойност}{1кг}{евтин}
+\weapon{mace}{Боздуган}{5-12}{близък (0.6м)}{средни (-4/0/)}{бронебойност}{1кг}{евтин}
+
 \weapon{throwing_knife}{Нож за хвърляне}{3-9}{Сила/2}{ниски (/-4/-4)}{-}{0.2кг}{много евтин}
 \weapon{javelin}{Метателно копие}{5-12}{Сила}{високи (/0/0)}{-}{1кг}{много евтин}
 \weapon{pilum}{Пилум}{6-13}{Сила}{високи (/0/0)}{трудно за вадене}{1.2кг}{много евтин}
+\weapon{tomahawk}{Томахавка}{6-13}{Сила}{високи (/0/0)}{-}{0.7кг}{много евтин}
 
 \weapon{longbow}{Дълъг лък}{7, зарежда се 1 ход}{Сила*2}{високи (/0/0)}{-}{3кг}{много евтин}
 \weapon{arrow}{Бодкин стрела}{-}{+2}{-2}{бронебойност, трудно за вадене}{0.033кг}{много евтин}
@@ -139,10 +144,21 @@ Some other figures: There will be one noble household per 200 population, one la
 \weapon{windlass_crossbow}{Арбалет с макара}{7 необходима, 12 реална, зарежда се 12 хода}{Сила*2}{високи (/0/0)}{-}{3кг}{среден}
 \weapon{bolt}{Болт}{-}{+2}{-2}{трудно за вадене}{0.033кг}{много евтин}
 
-\weapon{viking_shield}{Щит}{5-12}{близък (0.8/2м)}{ниски}{-}{5кг}{много евтин}
-
+\weapon{viking_shield}{Щит}{5-12}{близък (0.8/2м)}{ниски}{-}{3.5кг}{много евтин}
 
 \subsection{Брони}
+
+\weapon{full_helm}{Пълен шлем}{-}{-}{-}{-}{1.5кг}{евтин}
+\weapon{great_helm}{Пълен шлем}{-}{-}{-}{-}{2кг}{евтин}
+
+\weapon{gambeson}{Гамбезон}{-}{-}{-}{-}{4кг}{много евтин}
+\weapon{hauberk}{Хауберк}{-}{-}{-}{-}{10кг}{евтин}
+\weapon{cuirasse}{Кираса}{-}{-}{-}{-}{10кг}{среден}
+\weapon{full_plate}{Пълна броня}{-}{-}{-}{-}{20кг}{скъп}
+
+
+
+
 \textbf{Здравина}:
 \begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
 \item{Кожена броня(слоеве памук/хартия/коприна/мека кожа, със зашити плочи варена кожа/хитинова коруба на негъвкавите части) 2}
