[items] New armor types added.

--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -133,13 +133,29 @@ Some other figures: There will be one noble household per 200 population, one la
 
 \subsection{Брони}
 
-\armor{full_helm}{Пълен шлем}{5}{10}{1.5кг}{евтин}
-\armor{great_helm}{Пълен шлем}{7}{10}{2кг}{евтин}
+\armor{helmet_padding}{Подплата за шлем}{4}{2}{-}{0.5кг}{много евтин}
+\armor{leather_helmet}{Кожен шлем}{3}{2}{-}{1кг}{много евтин}
 
-\armor{gambeson}{Гамбезон}{торс 7, ръце 2, крака 2}{2}{4кг}{много евтин}
-\armor{hauberk}{Хауберк}{торс 7, ръце 2, крака 2}{6}{10кг}{евтин}
-\armor{cuirasse}{Кираса}{4}{10}{8кг}{среден}
-\armor{full_plate}{Пълна броня}{глава 10, торс 10, ръце 10, крака 10}{10}{20кг}{скъп}
+\armor{coif}{Халчеста качулка}{5}{4}{-}{3кг}{евтин}
+\armor{aventail}{Халчесто було}{2}{4}{-}{1кг}{много евтин}
+
+\armor{skull_cap}{Цервелиер}{2}{6}{-}{1.5кг}{много евтин}
+\armor{nasal_helmet}{Шлем с наносник}{3}{6}{-}{2кг}{много евтин}
+\armor{barbute}{Барбут}{4}{6}{-}{3кг}{евтин}
+\armor{great_helm}{Пълен шлем}{5}{6}{-1 Ловкост}{3кг}{евтин}
+\armor{armet}{Армет}{7}{7}{-1 Ловкост}{4кг}{среден}
+
+\armor{gambeson}{Гамбезон}{торс 7, ръце 2, крака 2}{2}{-}{4кг}{много евтин}
+
+\armor{haubergeon}{Хаубергенеон}{торс 5, ръце 2}{4}{-}{8кг}{евтин}
+\armor{hauberk}{Хауберк}{торс 7, ръце 2, крака 2}{4}{-}{10кг}{среден}
+
+\armor{mail_with_plates}{Хауберк с плочки}{торс 7, ръце 2, крака 2}{5}{-}{12кг}{среден}
+\armor{lorica_squamata}{Лорика сквамата}{5}{5}{-}{10кг}{среден}
+\armor{lorica_segmenta}{Лорика сегментата}{торс 5, ръце 2}{6}{-}{8кг}{среден}  % 'half the weight of chain mail'
+
+\armor{cuirasse}{Кираса}{4}{7}{-}{8кг}{среден}
+\armor{full_plate}{Пълна броня}{глава 7, торс 7, ръце 7, крака 7}{7}{-1 Ловкост}{20кг}{скъп}
 
 
 
