--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -60,16 +60,19 @@
   Стойност: #8  \\
   \includegraphics[height=0.13\textheight]{../images/#1}~
 \end{multicols}
+\vspace{0.01cm}
 }
 
-\newcommand{\armor}[6]
+\newcommand{\armor}[7]
 {
 \begin{multicols}{2}
   \noindent \textbf{#2} \\
   Покритие: #3  \\
   Абсорбация: #4  \\
-  Маса: #5  \\
-  Стойност: #6  \\
+  Свойства: #5  \\
+  Маса: #6  \\
+  Стойност: #7  \\
   \includegraphics[height=0.13\textheight]{../images/#1}~
 \end{multicols}
+\vspace{0.01cm}
 }
