[items] Many new armor pieces.

--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -132,18 +132,26 @@ Some other figures: There will be one noble household per 200 population, one la
 \weapon{viking_shield}{Щит}{5-12}{близък (0.8/2м)}{ниски}{-}{3.5кг}{много евтин}
 
 \subsection{Брони}
-
-\armor{helmet_padding}{Подплата за шлем}{4}{2}{-}{0.5кг}{много евтин}
+\subsubsection{Глава и шия}
+%\subsubsubsection{Шлемове}
 \armor{leather_helmet}{Кожен шлем}{3}{2}{-}{1кг}{много евтин}
 
 \armor{coif}{Халчеста качулка}{5}{4}{-}{3кг}{евтин}
-\armor{aventail}{Халчесто було}{2}{4}{-}{1кг}{много евтин}
 
 \armor{skull_cap}{Цервелиер}{2}{6}{-}{1.5кг}{много евтин}
 \armor{nasal_helmet}{Шлем с наносник}{3}{6}{-}{2кг}{много евтин}
 \armor{barbute}{Барбут}{4}{6}{-}{3кг}{евтин}
 \armor{great_helm}{Пълен шлем}{5}{6}{-1 Ловкост}{3кг}{евтин}
 \armor{armet}{Армет}{7}{7}{-1 Ловкост}{4кг}{среден}
+
+\armor{helmet_padding}{Подплата за шлем}{4}{2}{-}{0.5кг}{много евтин}
+\armor{aventail}{Було}{2}{4}{-}{1кг}{много евтин}
+\armor{bevor}{Яка}{2}{7}{}{1кг}{евтин}
+
+\subsubsection{}
+\subsubsection{}
+\subsubsection{}
+\subsubsection{}
 
 \armor{gambeson}{Гамбезон}{торс 7, ръце 2, крака 2}{2}{-}{4кг}{много евтин}
 
@@ -152,9 +160,28 @@ Some other figures: There will be one noble household per 200 population, one la
 
 \armor{mail_with_plates}{Хауберк с плочки}{торс 7, ръце 2, крака 2}{5}{-}{12кг}{среден}
 \armor{lorica_squamata}{Лорика сквамата}{5}{5}{-}{10кг}{среден}
-\armor{lorica_segmenta}{Лорика сегментата}{торс 5, ръце 2}{6}{-}{8кг}{среден}  % 'half the weight of chain mail'
+\armor{lorica_segmenta}{Лорика сегментата}{торс 5, ръце 2}{6}{-}{8кг}{среден}
+\armor{brigandine}{Бригантина}{5}{6}{-}{8кг}{среден}
 
+\armor{breastplate}{Нагръдник}{3}{7}{-}{4кг}{евтин}
 \armor{cuirasse}{Кираса}{4}{7}{-}{8кг}{среден}
+
+\armor{culet}{Кулет}{торс 1, крака 1}{5}{-}{2кг}{евтин}
+\armor{faulds}{Фаулд}{2}{5}{-}{2кг}{евтин}
+\armor{spaulder}{Спaлдери}{2}{5}{-}{2кг}{евтин}
+\armor{paudron}{Паудрони}{глава 1, торс 1, ръце 2}{5}{-}{5кг}{евтин}
+\armor{couter}{Налакътници}{1}{5}{-}{1кг}{евтин}
+\armor{gauntlets}{Гаунтлети}{2}{5}{-}{1кг}{евтин}
+\armor{chain_gloves}{Халчести ръкавици}{3}{4}{-}{1кг}{евтин}
+\armor{gloves}{Ръкавици}{3}{2}{-}{0.5кг}{много евтин}
+\armor{leather_vambraces}{Браслети от варена кожа}{2}{2}{-}{0.5кг}{много евтин}
+\armor{splint_leather_vambraces}{Подсилени кожени браслети}{2}{3}{-}{1кг}{много евтин}
+\armor{steel_vambraces}{Браслети от кована стомана}{2}{6}{-}{1.5кг}{много евтин}
+\armor{besagew}{Слънца}{торс 1, ръце 1}{2}{-}{1кг}{евтин}
+\armor{laminar_vambrace}{Горен канон от пластини}{2}{5}{-}{1кг}{евтин}
+\armor{plate_vambrace}{Кован горен канон}{2}{7}{-}{3кг}{евтин}
+
+\armor{full_plate_hands}{Пълна броня}{глава 7, торс 7, ръце 7, крака 7}{7}{-1 Ловкост}{20кг}{скъп}
 \armor{full_plate}{Пълна броня}{глава 7, торс 7, ръце 7, крака 7}{7}{-1 Ловкост}{20кг}{скъп}
 
 
